# Refine-EA

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  Taskfile.yml  docker-requirements.txt  pyproject.toml  requirements.txt
configs/: llm_config.yaml  vllm_config.yaml
launchers/base_launcher/: .env copy  README.md  docker-compose.yaml  sbatch.sh
launchers/server_launcher/: .env copy  README.md  docker-compose.yaml  sbatch.sh
refine_ea/: main_refine_ea.py
refine_ea/llm/: __init__.py  base.py  entity_matcher.py  huggingface_interface.py  vllm_interface.py
refine_ea/matching/: __init__.py  attribute_extractor.py  candidate_selector.py  entity_matcher.py
refine_ea/pipeline/: __init__.py  alignment_pipeline.py
refine_ea/utils/: __init__.py  config_loader.py  extract_entity_attributes.py
script/: docker_requirements_torch_deletion_script.py
